# DroneOptimization

./: CMakeLists.txt  README.md
3rd/: stb_image.h
src/: DroneOptimization.cpp
src/Cuda/: DroneUtil.cu  DroneUtil.h  GeneticAlgorithmPARA.cu  GeneticAlgorithmPARA.h  hungarian_algorithm.cu  hungarian_algorithm.h
src/Main/: DroneOptHungarian.cpp  DroneOptPointSprite.cpp  DroneOptSample.cpp
src/Python/: hungarian_speed_test.py
src/Util/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  hungarian_algorithm_cpu.cpp  hungarian_algorithm_cpu.h  hungarian_algorithm_para.cpp  hungarian_algorithm_para.h
test/: GA_PARA_speed_test.cpp  GA_speed_test.cpp  HAcpu_test.cpp  hungarian_PARA_speed_test.cpp  hungarian_algorithm_test..cpp  hungarian_cpu_speed_test.cpp  hungarian_speed_test.cpp
